--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "mmonorepo",
+  "name": "monorepo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
