--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,28 +13,21 @@
     "react-native": "^0.66.1"
   },
   "devDependencies": {
+    "@react-native-community/cli-platform-android": "^6.1.0",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.31",
     "@types/react-native": "^0.65.10",
     "@types/react-test-renderer": "^17.0.1",
     "babel-core": "^6.26.3",
     "babel-jest": "^27.3.1",
+    "cross-env": "^7.0.3",
     "jest": "^27.3.1",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4",
-    "cross-env": "^7.0.3"
+    "typescript": "^4.4.4"
   },
   "jest": {
     "preset": "react-native"
-  },
-  "workspaces": {
-    "nohoist": [
-      "react-native",
-      "react-native/**",
-      "react",
-      "react/**"
-    ]
   }
 }
