--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,19 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.3",
-    "@types/react": "^17.0.31",
-    "@types/react-dom": "^17.0.10",
-    "@wow/common": "1.0.0",
     "node-sass": "^4.0.0",
     "react": "^17.0.2",
     "react-art": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "^0.66.1",
     "react-native-web": "^0.17.5",
-    "react-scripts": "2.1.5",
-    "typescript": "^4.4.4"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
@@ -33,6 +27,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.3",
+    "@types/react": "^17.0.31",
+    "@types/react-dom": "^17.0.10",
+    "@wow/common": "1.0.0",
     "@types/react-native": "^0.65.10",
     "cross-env": "^7.0.3",
     "typescript": "^4.4.4"
